# lab2_sem2

./: ArraySequence.h  CMakeLists.txt  DynamicArray.h  LinkedList.h  ListSequence.h  README.md  Sequence.h  TestsArraySequence.h  TestsDynamicArray.h  TestsLinkedList.h  TestsListSequence.h  main.cpp  ui.h
